--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -228,58 +228,71 @@ main {
     margin: -25% auto;
   }
 }
-.featured-series--list,
-.series-grid--list {
+.featured-series .featured-series--list,
+.featured-series .series-grid--list,
+.series-grid .featured-series--list,
+.series-grid .series-grid--list {
+  align-content: center;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
-  max-width: 90rem;
+  justify-content: flex-start;
   list-style: none;
   margin: 0 auto;
+  max-width: 90rem;
   padding: 0;
+  width: 100%;
 }
-.featured-series--list-item,
-.series-grid--list-item {
+.featured-series .featured-series--list-item,
+.featured-series .series-grid--list-item,
+.series-grid .featured-series--list-item,
+.series-grid .series-grid--list-item {
+  aspect-ratio: 1/1;
   border: 1px solid black;
   box-sizing: border-box;
   display: inline-block;
   height: 25%;
   list-style: none;
   margin: 0;
-  max-width: 480px;
   max-height: 480px;
+  max-width: 480px;
   overflow: hidden;
   padding: 0;
   width: 25%;
-  aspect-ratio: 1/1;
 }
-.featured-series--series-link,
-.series-grid--series-link {
-  display: flex;
-  flex-flow: row wrap;
+.featured-series .featured-series--link,
+.featured-series .series-grid--link,
+.series-grid .featured-series--link,
+.series-grid .series-grid--link {
   align-content: center;
-  justify-content: center;
+  align-content: center;
   background: #161616;
   cursor: pointer;
+  display: block;
+  flex-flow: row wrap;
   height: 100%;
+  justify-content: center;
   margin: 0;
   max-height: 480px;
   position: relative;
   width: 100%;
   z-index: 100;
 }
-.featured-series--series-link .featured-series--series-title,
-.featured-series--series-link .series-grid--title,
-.series-grid--series-link .featured-series--series-title,
-.series-grid--series-link .series-grid--title {
+.featured-series .featured-series--link .featured-series--title,
+.featured-series .featured-series--link .series-grid--title,
+.featured-series .series-grid--link .featured-series--title,
+.featured-series .series-grid--link .series-grid--title,
+.series-grid .featured-series--link .featured-series--title,
+.series-grid .featured-series--link .series-grid--title,
+.series-grid .series-grid--link .featured-series--title,
+.series-grid .series-grid--link .series-grid--title {
   align-self: center;
   background: rgba(0, 0, 0, 0.55);
   box-sizing: border-box;
   color: #fff;
   display: none;
-  height: 100%;
   font-size: 1.25rem;
   font-weight: 700;
+  height: 100%;
   justify-self: center;
   left: 0;
   letter-spacing: 0.05rem;
@@ -294,20 +307,29 @@ main {
   width: 100%;
   z-index: 5;
 }
-.featured-series--series-link:hover .featured-series--series-title,
-.featured-series--series-link:hover .series-grid--title, .featured-series--series-link:focus .featured-series--series-title,
-.featured-series--series-link:focus .series-grid--title,
-.series-grid--series-link:hover .featured-series--series-title,
-.series-grid--series-link:hover .series-grid--title,
-.series-grid--series-link:focus .featured-series--series-title,
-.series-grid--series-link:focus .series-grid--title {
+.featured-series .featured-series--link:hover .featured-series--title,
+.featured-series .featured-series--link:hover .series-grid--title, .featured-series .featured-series--link:focus .featured-series--title,
+.featured-series .featured-series--link:focus .series-grid--title,
+.featured-series .series-grid--link:hover .featured-series--title,
+.featured-series .series-grid--link:hover .series-grid--title,
+.featured-series .series-grid--link:focus .featured-series--title,
+.featured-series .series-grid--link:focus .series-grid--title,
+.series-grid .featured-series--link:hover .featured-series--title,
+.series-grid .featured-series--link:hover .series-grid--title,
+.series-grid .featured-series--link:focus .featured-series--title,
+.series-grid .featured-series--link:focus .series-grid--title,
+.series-grid .series-grid--link:hover .featured-series--title,
+.series-grid .series-grid--link:hover .series-grid--title,
+.series-grid .series-grid--link:focus .featured-series--title,
+.series-grid .series-grid--link:focus .series-grid--title {
   display: block;
 }
-.featured-series--series-link .featured-series--series-image,
-.featured-series--series-link .series-grid--image,
-.series-grid--series-link .featured-series--series-image,
-.series-grid--series-link .series-grid--image {
+.featured-series .featured-series--image,
+.featured-series .series-grid--image,
+.series-grid .featured-series--image,
+.series-grid .series-grid--image {
   width: 100%;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 650px) {
