--- a/gallery/static/scss/_series-grid.scss
+++ b/gallery/static/scss/_series-grid.scss
@@ -82,8 +82,23 @@
 
   .featured-series--image,
   .series-grid--image {
-    width: 100%;
-    max-width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    // max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    height: auto;
+    width: auto;
+
+    // min-width: 100%;
+    // max-width: 100%;
+    // min-width: 25vw;
+    // min-height: 100%;
+    // aspect-ratio: 1/1;
   }
 }
 
