--- a/gallery/static/scss/_slideshow.scss
+++ b/gallery/static/scss/_slideshow.scss
@@ -2,10 +2,10 @@
   align-items: center;
   display: flex;
   height: 75vh;
-  min-height: 40rem;
   justify-content: center;
   margin: 0 auto;
   max-width: 90rem;
+  min-height: 40rem;
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -13,16 +13,20 @@
   .featured-images {
     align-items: center;
     display: flex;
+    height: 100%;
     list-style: none;
     margin: 0 auto;
     max-width: 90rem;
     padding: 0;
+    position: relative;
     width: 100%;
   }
 
   .featured-image {
+    height: 100%;
     list-style: none;
     margin: 0;
+    max-width: 100%;
     opacity: 0;
     padding: 0;
     position: absolute;
@@ -39,8 +43,8 @@
     }
 
     img {
-      height: 100%;
-      margin: -50% auto;
+      max-width: 100%;
+      position: absolute;
       width: 100%;
     }
   }
@@ -51,10 +55,10 @@
     display: flex;
     height: 100%;
     justify-content: center;
+    margin: 0 10rem;
     opacity: 0;
     position: absolute;
     transition: background 0.5s ease-in-out;
-    margin: 0 10rem;
     width: calc(100% - 20rem);
     z-index: 10;
 
@@ -71,16 +75,16 @@
   }
 
   .slideshow-nav {
-    position: absolute;
-    z-index: 200;
-    height: 100%;
-    display: flex;
     align-items: center;
-    justify-content: center;
-    width: 8rem;
     background: rgba(0, 0, 0, 0.35);
+    display: flex;
+    height: 100%;
+    justify-content: center;
     opacity: 0;
+    position: absolute;
     transition: opacity 0.5s ease-in-out;
+    width: 8rem;
+    z-index: 200;
 
     &.prev {
       border-right: 1px solid rgba(0, 0, 0, 0.5);
@@ -99,12 +103,12 @@
     }
 
     button {
-      position: relative;
-      height: 100%;
-      width: 100%;
       background: transparent;
       border: 0;
       cursor: pointer;
+      height: 100%;
+      position: relative;
+      width: 100%;
     }
   }
 
