--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Unicase|IM+Fell+Great+Primer+SC|Raleway:400,400i,500,500i,700,700i");
 html,
 body {
+  background: #000;
   margin: 0;
   padding: 0;
 }
@@ -10,10 +11,22 @@ html {
 }
 
 body {
-  background: #000;
   color: #eee;
   font-family: "Raleway", sans-serif;
   padding: 9rem 0 0 0;
+}
+
+header,
+main,
+footer {
+  opacity: 0;
+}
+
+.ready header,
+.ready main,
+.ready footer {
+  opacity: 1;
+  transition: opacity 1.5s ease;
 }
 
 h1,
@@ -105,10 +118,10 @@ main {
   align-items: center;
   display: flex;
   height: 75vh;
-  min-height: 40rem;
   justify-content: center;
   margin: 0 auto;
   max-width: 90rem;
+  min-height: 40rem;
   overflow: hidden;
   position: relative;
   width: 100%;
@@ -116,15 +129,19 @@ main {
 .slideshow .featured-images {
   align-items: center;
   display: flex;
+  height: 100%;
   list-style: none;
   margin: 0 auto;
   max-width: 90rem;
   padding: 0;
+  position: relative;
   width: 100%;
 }
 .slideshow .featured-image {
+  height: 100%;
   list-style: none;
   margin: 0;
+  max-width: 100%;
   opacity: 0;
   padding: 0;
   position: absolute;
@@ -140,8 +157,8 @@ main {
   visibility: visible;
 }
 .slideshow .featured-image img {
-  height: 100%;
-  margin: -50% auto;
+  max-width: 100%;
+  position: absolute;
   width: 100%;
 }
 .slideshow .slideshow-play-overlay {
@@ -150,10 +167,10 @@ main {
   display: flex;
   height: 100%;
   justify-content: center;
+  margin: 0 10rem;
   opacity: 0;
   position: absolute;
   transition: background 0.5s ease-in-out;
-  margin: 0 10rem;
   width: calc(100% - 20rem);
   z-index: 10;
 }
@@ -163,16 +180,16 @@ main {
   transition: background 0.5s ease-in-out;
 }
 .slideshow .slideshow-nav {
-  position: absolute;
-  z-index: 200;
-  height: 100%;
-  display: flex;
   align-items: center;
-  justify-content: center;
-  width: 8rem;
   background: rgba(0, 0, 0, 0.35);
+  display: flex;
+  height: 100%;
+  justify-content: center;
   opacity: 0;
+  position: absolute;
   transition: opacity 0.5s ease-in-out;
+  width: 8rem;
+  z-index: 200;
 }
 .slideshow .slideshow-nav.prev {
   border-right: 1px solid rgba(0, 0, 0, 0.5);
@@ -188,12 +205,12 @@ main {
   transition: opacity 0.5s ease-in-out;
 }
 .slideshow .slideshow-nav button {
-  position: relative;
-  height: 100%;
-  width: 100%;
   background: transparent;
   border: 0;
   cursor: pointer;
+  height: 100%;
+  position: relative;
+  width: 100%;
 }
 .slideshow button {
   background: transparent;
@@ -328,8 +345,11 @@ main {
 .featured-series .series-grid--image,
 .series-grid .featured-series--image,
 .series-grid .series-grid--image {
-  width: 150%;
-  max-width: 150%;
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+  height: auto;
+  width: auto;
 }
 
 @media screen and (max-width: 650px) {
@@ -337,6 +357,85 @@ main {
   .series-grid--list-item {
     width: 50%;
   }
+}
+.top {
+  top: 0;
+  bottom: auto;
+  margin: 0 auto auto;
+  left: 0;
+  right: 0;
+}
+.top-center {
+  top: 0;
+  bottom: auto;
+  margin: 0 auto auto;
+  left: 0;
+  right: 0;
+}
+.top-left {
+  top: 0;
+  bottom: auto;
+  margin: 0 auto auto;
+  left: 0;
+  right: auto;
+}
+.top-right {
+  top: 0;
+  bottom: auto;
+  margin: 0 auto auto;
+  right: 0;
+  left: auto;
+}
+
+.center {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+  right: 0;
+}
+.center-left {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: 0;
+  right: auto;
+}
+.center-right {
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  left: auto;
+  right: 0;
+}
+
+.bottom {
+  bottom: 0;
+  top: auto;
+  margin: auto auto 0 auto;
+  left: 0;
+  right: 0;
+}
+.bottom-center {
+  bottom: 0;
+  top: auto;
+  margin: auto auto 0 auto;
+  left: 0;
+  right: 0;
+}
+.bottom-left {
+  bottom: 0;
+  top: auto;
+  margin: auto auto 0 auto;
+  left: 0;
+  right: auto;
+}
+.bottom-right {
+  bottom: 0;
+  top: auto;
+  margin: auto auto 0 auto;
+  right: 0;
+  left: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
