--- a/assets/scss/_series-grid.scss
+++ b/assets/scss/_series-grid.scss
@@ -77,13 +77,23 @@
         display: block;
       }
     }
-
   }
 
   .featured-series--image,
   .series-grid--image {
-    width: 150%;
-    max-width: 150%;
+    position: absolute;
+
+    // max-width: 100%;
+    min-height: 100%;
+    min-width: 100%;
+    height: auto;
+    width: auto;
+
+    // min-width: 100%;
+    // max-width: 100%;
+    // min-width: 25vw;
+    // min-height: 100%;
+    // aspect-ratio: 1/1;
   }
 }
 
