--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -245,10 +245,7 @@ main {
     margin: -25% auto;
   }
 }
-.featured-series .featured-series--list,
-.featured-series .series-grid--list,
-.series-grid .featured-series--list,
-.series-grid .series-grid--list {
+.image-grid .image-grid--list {
   align-content: center;
   display: flex;
   flex-flow: row wrap;
@@ -259,10 +256,7 @@ main {
   padding: 0;
   width: 100%;
 }
-.featured-series .featured-series--list-item,
-.featured-series .series-grid--list-item,
-.series-grid .featured-series--list-item,
-.series-grid .series-grid--list-item {
+.image-grid .image-grid--list-item {
   aspect-ratio: 1/1;
   border: 1px solid black;
   box-sizing: border-box;
@@ -276,10 +270,7 @@ main {
   padding: 0;
   width: 25%;
 }
-.featured-series .featured-series--link,
-.featured-series .series-grid--link,
-.series-grid .featured-series--link,
-.series-grid .series-grid--link {
+.image-grid .image-grid--link {
   align-content: center;
   align-content: center;
   background: #161616;
@@ -294,14 +285,7 @@ main {
   width: 100%;
   z-index: 100;
 }
-.featured-series .featured-series--link .featured-series--title,
-.featured-series .featured-series--link .series-grid--title,
-.featured-series .series-grid--link .featured-series--title,
-.featured-series .series-grid--link .series-grid--title,
-.series-grid .featured-series--link .featured-series--title,
-.series-grid .featured-series--link .series-grid--title,
-.series-grid .series-grid--link .featured-series--title,
-.series-grid .series-grid--link .series-grid--title {
+.image-grid .image-grid--link .image-grid--title {
   align-self: center;
   background: rgba(0, 0, 0, 0.55);
   box-sizing: border-box;
@@ -324,27 +308,10 @@ main {
   width: 100%;
   z-index: 5;
 }
-.featured-series .featured-series--link:hover .featured-series--title,
-.featured-series .featured-series--link:hover .series-grid--title, .featured-series .featured-series--link:focus .featured-series--title,
-.featured-series .featured-series--link:focus .series-grid--title,
-.featured-series .series-grid--link:hover .featured-series--title,
-.featured-series .series-grid--link:hover .series-grid--title,
-.featured-series .series-grid--link:focus .featured-series--title,
-.featured-series .series-grid--link:focus .series-grid--title,
-.series-grid .featured-series--link:hover .featured-series--title,
-.series-grid .featured-series--link:hover .series-grid--title,
-.series-grid .featured-series--link:focus .featured-series--title,
-.series-grid .featured-series--link:focus .series-grid--title,
-.series-grid .series-grid--link:hover .featured-series--title,
-.series-grid .series-grid--link:hover .series-grid--title,
-.series-grid .series-grid--link:focus .featured-series--title,
-.series-grid .series-grid--link:focus .series-grid--title {
+.image-grid .image-grid--link:hover .image-grid--title, .image-grid .image-grid--link:focus .image-grid--title {
   display: block;
 }
-.featured-series .featured-series--image,
-.featured-series .series-grid--image,
-.series-grid .featured-series--image,
-.series-grid .series-grid--image {
+.image-grid .image-grid--image {
   position: absolute;
   min-height: 100%;
   min-width: 100%;
@@ -353,8 +320,7 @@ main {
 }
 
 @media screen and (max-width: 650px) {
-  .featured-series--list-item,
-  .series-grid--list-item {
+  .image-grid--list-item {
     width: 50%;
   }
 }
